--- a/Test/Test - vs/ES6-vs-WASM.html
+++ b/Test/Test - vs/ES6-vs-WASM.html
@@ -17,7 +17,7 @@
       var Module = Module || {}
 
       //'WEB' / 'WORKER' / 'NODE' / 'SHELL'
-      Module['ENVIRONMENT'] = 'WEB'
+      //Module['ENVIRONMENT'] = 'WEB'
 
       var wasmRoot = '../../Emscripten/dist/wasm/'
 
