--- a/Test/Test - three.js/wasm.html
+++ b/Test/Test - three.js/wasm.html
@@ -22,7 +22,7 @@
 
       var wasmRoot = '../../Emscripten/dist/wasm/'
 
-      //Module.TOTAL_MEMORY = 16777216 * 2
+      Module.TOTAL_MEMORY = 16777216
 
       Module.wasmBinaryFile = wasmRoot + 'ParticleSystem.wasm'
 
