--- a/slides/index.html
+++ b/slides/index.html
@@ -670,6 +670,9 @@ function _addAndPrint($left, $right) {
             </ul>
           </section>
           <section>
+            <img src="./img/benchmark.png" height="650"  style="position: absolute;top: 22%;">
+          </section>
+          <section>
             <img src="./img/vs-test.png" height="450" style="position: absolute;left: 10%;top: 25%;">
             Autodesk Forge Viewer
             <ul>
