--- a/slides/index.html
+++ b/slides/index.html
@@ -85,25 +85,25 @@
 					<!--<iframe src="./slides/connected-data.html" style="width:800px;height:500px;">-->
 					<!--</iframe>-->
 
-					<p style="bottom: 0px; position: relative;">
-						<small style="margin-bottom: 10px;">
-							<a href="http://http://twitter.com/F3lipek">
-								Philippe Leefsma
-							</a>
-							/
-							<a href="http://twitter.com/F3lipek">
-								@F3lipek
-							</a>
-							<br>
-							Forge Partner Development
-						</small>
-            <br>
-            <div style="position: relative">
-            <img src="./img/adsk.ico" width="60" height="60"/>
-            <img src="./img/forge.png" width="60" height="60"/>
-            <!--<img class="adsk-logo" src="./img/adsk.ico" width="60" height="60" style="position: relative; transform: rotateY(90deg);"/>-->
-            <!--<img class="adsk-logo" src="./img/forge.png" width="60" height="60" style="position: relative; display: none; transform: rotateY(90deg);"/>-->
-            </div>
+					<p style="bottom: 250px; position: absolute;">
+                      <small style="margin-bottom: 10px;">
+                          <a href="http://http://twitter.com/F3lipek">
+                              Philippe Leefsma
+                          </a>
+                          /
+                          <a href="http://twitter.com/F3lipek">
+                              @F3lipek
+                          </a>
+                          <br>
+                          Forge Partner Development
+                      </small>
+                      <br>
+                      <div style="bottom: 200px; position: absolute;">
+                        <img src="./img/adsk.ico" width="60" height="60"/>
+                        <img src="./img/forge.png" width="60" height="60"/>
+                        <!--<img class="adsk-logo" src="./img/adsk.ico" width="60" height="60" style="position: relative; transform: rotateY(90deg);"/>-->
+                        <!--<img class="adsk-logo" src="./img/forge.png" width="60" height="60" style="position: relative; display: none; transform: rotateY(90deg);"/>-->
+                      </div>
 					</p>
 				</section>
 
@@ -540,9 +540,6 @@ emcc tests/hello_world.c -o hello.html
             </ul>
           </section>
           <section>
-
-          </section>
-          <section>
             <pre><code contenteditable>
 python ~/emsdk/emscripten/incoming/tools/webidl_binder.py bindings.idl glue
             </code></pre>
@@ -641,7 +638,7 @@ function _addAndPrint($left, $right) {
 }
             </code></pre>
             <br>
-            <p>Not always match exactly original variable names in source, but often quite close</p>
+            <p>Not always match exactly original variable names in source<br>but often quite close</p>
           </section>
           <section>
             <p><b>-g4</b> : source maps</p>
@@ -673,8 +670,8 @@ function _addAndPrint($left, $right) {
             <img src="./img/benchmark.png" height="650"  style="position: absolute;top: 22%;">
           </section>
           <section>
-            <img src="./img/vs-test.png" height="450" style="position: absolute;left: 10%;top: 25%;">
-            Autodesk Forge Viewer
+            <img src="./img/viewer.png" height="350" style="position: absolute;left: 10px;top: 30%;">
+            <p style="margin-left: 250px;">Autodesk Forge Viewer</p>
             <ul>
               <li style="margin-bottom: 20px; margin-top: 50px;">
                 <a href="../Test/Test%20-%20viewer/es6.html" target="_blank">
@@ -694,8 +691,8 @@ function _addAndPrint($left, $right) {
             </ul>
           </section>
           <section>
-            <img src="./img/vs-test.png" height="450" style="position: absolute;left: 10%;top: 25%;">
-            THREE.js Test
+            <img src="./img/three.png" height="480" style="position: absolute;left: 30px;top: 30%;">
+            <p style="margin-left: 85px;">THREE.js Test</p>
             <ul>
               <li style="margin-bottom: 20px; margin-top: 50px;">
                 <a href="../Test/Test%20-%20three.js/es6.html" target="_blank">
@@ -715,8 +712,8 @@ function _addAndPrint($left, $right) {
             </ul>
           </section>
           <section>
-            <img src="./img/vs-test.png" height="450" style="position: absolute;left: 10%;top: 25%;">
-            LHC Bonus
+            <img src="./img/lhc.png" height="320" style="position: absolute;left: 30px;top: 30%;">
+            <p style="margin-left: 55px;">LHC Bonus</p>
             <ul>
               <li style="margin-bottom: 20px; margin-top: 50px;">
                 <a href="../Test/Test%20-%20LHC/es6.html" target="_blank">
@@ -794,7 +791,8 @@ function _addAndPrint($left, $right) {
                 three.js demo
               </a>
             </b>
-            <img src="./img/physics.png" height="350" style="position: absolute; top: 25%; left: 3%;">
+            <img src="./img/physics.png" height="350" style="position: absolute; top: 10%; left: 3%;">
+            <img src="./img/three2.png" height="350" style="position: absolute; top: 50%; left: 12%;">
           </section>
           <section>
             <b style="margin-bottom: 250px;">Online Unity demos</b>
