--- a/slides/index.html
+++ b/slides/index.html
@@ -87,11 +87,11 @@
 
 					<p style="bottom: 250px; position: absolute;">
                       <small style="margin-bottom: 10px;">
-                          <a href="http://http://twitter.com/F3lipek">
+                          <a href="http://http://twitter.com/F3lipek" target="_blank">
                               Philippe Leefsma
                           </a>
                           /
-                          <a href="http://twitter.com/F3lipek">
+                          <a href="http://twitter.com/F3lipek" target="_blank">
                               @F3lipek
                           </a>
                           <br>
@@ -214,7 +214,7 @@
 
 
         <section>
-          <a href="http://emscripten.org">
+          <a href="http://emscripten.org" target="_blank">
             <img src="img/emscripten_switch_logo.png">
           </a>
           <br>
@@ -264,7 +264,7 @@ function main() { // JavaScript
         b = (b + 1) | 0;
     } while ((b | 0) < 5000);
           </code></pre>
-          <p class="fragment">This is <a href="http://asmjs.org">asm.js</a></b></p>
+          <p class="fragment">This is <a href="http://asmjs.org" target="_blank">asm.js</a></b></p>
           </section>
           <section>
             <h2 style="color:#a9dc24;">asm.js</h2>
@@ -350,7 +350,7 @@ function main() { // JavaScript
           </p>
           <br>
           <p class="fragment">
-            <a href="https://github.com/WebAssembly/ilwasm">ilwasm</a> for <b>.NET/CIL</b>
+            <a href="https://github.com/WebAssembly/ilwasm" target="_blank">ilwasm</a> for <b>.NET/CIL</b>
           </p>
           <br>
           <hr class="fragment">
@@ -434,7 +434,7 @@ function main() { // JavaScript
           </div>
           <br>
           <p class="fragment">
-            <a href="https://github.com/WebAssembly/binaryen">
+            <a href="https://github.com/WebAssembly/binaryen" target="_blank">
               https://github.com/WebAssembly/binaryen
             </a>
           </p>
@@ -841,11 +841,11 @@ function _addAndPrint($left, $right) {
           <h2 style="top: 115px;">WITH C++</h2>
           <p style="bottom: 0px; position: relative;">
             <small style="margin-bottom: 10px;">
-              <a href="http://http://twitter.com/F3lipek">
+              <a href="http://http://twitter.com/F3lipek" target="_blank">
                 Philippe Leefsma
               </a>
               /
-              <a href="http://twitter.com/F3lipek">
+              <a href="http://twitter.com/F3lipek" target="_blank">
                 @F3lipek
               </a>
               <br>
