--- a/slides/index.html
+++ b/slides/index.html
@@ -544,10 +544,6 @@ emcc tests/hello_world.c -o hello.html
 python ~/emsdk/emscripten/incoming/tools/webidl_binder.py bindings.idl glue
             </code></pre>
           </section>
-
-          <section>
-
-          </section>
         </section>
 
         <section>
@@ -833,13 +829,17 @@ function _addAndPrint($left, $right) {
               </li>
             </ul>
           </section>
-				</section>
+        </section>
 
 
         <section>
           <h2 style="top: 40px;">BOOST YOUR WEB APPLICATION</h2>
           <h2 style="top: 115px;">WITH C++</h2>
-          <p style="bottom: 0px; position: relative;">
+
+          <!--<iframe src="./slides/connected-data.html" style="width:800px;height:500px;">-->
+          <!--</iframe>-->
+
+          <p style="bottom: 250px; position: absolute;">
             <small style="margin-bottom: 10px;">
               <a href="http://http://twitter.com/F3lipek" target="_blank">
                 Philippe Leefsma
@@ -852,8 +852,12 @@ function _addAndPrint($left, $right) {
               Forge Partner Development
             </small>
             <br>
+          <div style="bottom: 200px; position: absolute;">
             <img src="./img/adsk.ico" width="60" height="60"/>
             <img src="./img/forge.png" width="60" height="60"/>
+            <!--<img class="adsk-logo" src="./img/adsk.ico" width="60" height="60" style="position: relative; transform: rotateY(90deg);"/>-->
+            <!--<img class="adsk-logo" src="./img/forge.png" width="60" height="60" style="position: relative; display: none; transform: rotateY(90deg);"/>-->
+          </div>
           </p>
         </section>
 
@@ -861,7 +865,7 @@ function _addAndPrint($left, $right) {
 		</div>
 
 
-    <script src="lib/js/jquery.min.js"></script>
+        <script src="lib/js/jquery.min.js"></script>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
