--- a/slides/samples/ammo.html
+++ b/slides/samples/ammo.html
@@ -248,6 +248,7 @@
                     new THREE.BoxGeometry(50, 2, 10),
                     material);
 
+                //mesh.castShadow = true;
                 mesh.receiveShadow = true;
 
                 mesh.position.copy(position);
@@ -280,6 +281,8 @@
                 _renderer.setSize(domContainer.clientWidth, domContainer.clientHeight)
                 _renderer.setPixelRatio(window.devicePixelRatio)
                 _renderer.shadowMapEnabled = true;
+                _renderer.shadowMapSoft = true;
+                _renderer.shadowMapType = THREE.PCFShadowMap;
                 //_renderer.setClearColor(0x9b9b9b)
 
                 this.fps = new FPSMeter(toolbarContainer, {
@@ -327,14 +330,19 @@
                 var ambientLight = new THREE.AmbientLight(0x555555);
                 _scene.add(ambientLight);
 
-//                var directionalLight = new THREE.DirectionalLight(0xffffff);
-//                directionalLight.position.set( -.5, .5, -1.5 ).normalize();
-//                _scene.add(directionalLight);
+                var directionalLight = new THREE.DirectionalLight(0xffffff);
+                directionalLight.position.set( -.5, .5, -1.5 ).normalize();
+                directionalLight.castShadow = true;
+                _scene.add(directionalLight);
 
-                var spotLight = new THREE.SpotLight(0xffffff);
-                spotLight.position.set( -.5, .5, -1.5);
-                spotLight.castShadow = true;
-                _scene.add(spotLight);
+                var spotLight1 = new THREE.SpotLight(0x111111);
+                spotLight1.position.set(0, 50, -25);
+                spotLight1.castShadow = true;
+                spotLight1.shadowBias = 0.0001;
+                spotLight1.shadowDarkness = 0.8;
+                spotLight1.shadowMapWidth = 2048;
+                spotLight1.shadowMapHeight = 2048;
+                _scene.add(spotLight1);
 
                 var material = new THREE.MeshLambertMaterial({
                     color: 0xdd0000
