--- a/Test/Test - vs/ES6-vs-ASM.html
+++ b/Test/Test - vs/ES6-vs-ASM.html
@@ -28,7 +28,7 @@
       <br style="margin: 10px;">
 
       <button id="btn-test-worker" class="test-btn">
-        Run Test (Worker Mode)
+        Run Test (Worker)
       </button>
 
     </div>
