--- a/slides/samples/ammo.html
+++ b/slides/samples/ammo.html
@@ -241,7 +241,7 @@
             function _createRamp(position, rotations) {
 
                 var material = new THREE.MeshLambertMaterial({
-                    color: 0xF74F4F
+                    color: 0xCCCCCC
                 })
 
                 var mesh = new THREE.Mesh(
