--- a/Test/Test - viewer/wasm.html
+++ b/Test/Test - viewer/wasm.html
@@ -24,6 +24,8 @@
 
       Module.wasmBinaryFile = wasmRoot + 'ParticleSystem.wasm'
 
+      Module.memoryInitializerPrefixURL = wasmRoot
+
       var xhr = new XMLHttpRequest()
       xhr.open('GET', wasmRoot + 'ParticleSystem.wasm', true)
       xhr.responseType = 'arraybuffer'
