--- a/Test/Test - vs/ES6-vs-WASM.html
+++ b/Test/Test - vs/ES6-vs-WASM.html
@@ -18,7 +18,7 @@
     <div class="test-config"></div>
 
     <button class="test-btn">
-      Run Test
+      Run Test (Worker)
     </button>
 
     <div class="test-results"></div>
