--- a/Test/Test - vs/ES6-vs-ASM.html
+++ b/Test/Test - vs/ES6-vs-ASM.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
   <head>
-    <meta charset="utf-8">
+    <link rel="shortcut icon" href="../resources/img/favicon.ico" type="image/x-icon"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Test - ES6 vs ASM.js</title>
   </head>
