--- a/slides/samples/ammo/ammo.html
+++ b/slides/samples/ammo/ammo.html
@@ -31,10 +31,10 @@
 </head>
 <body>
 
-    <script type="text/javascript" src="http://threejs.org/build/three.min.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/TrackballControls.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/kripken/ammo.js/master/builds/ammo.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/darsain/fpsmeter/master/dist/fpsmeter.min.js"></script>
+    <script type="text/javascript" src="lib/three.min.js"></script>
+    <script type="text/javascript" src="lib/TrackballControls.js"></script>
+    <script type="text/javascript" src="lib/ammo.js"></script>
+    <script type="text/javascript" src="lib/fpsmeter.min.js"></script>
 
 
     <div id="canvas">
@@ -44,7 +44,6 @@
 
     <script>
 
-      
         ///////////////////////////////////////////////////////////////////////
         // A stopwatch!
         //
